# GITRmProject

./: .gitignore  README.md
examples/: DiMES_mesh_generation.py
gmsh_automated_scripts/: README.md  pyproject.toml  test.msh
gmsh_automated_scripts/example/: DiMES_mesh_generation.py  example.py
gmsh_automated_scripts/gmsh_automated_scripts/: DiMES_mesh_generation.py  __init__.py  utils.py  utils2.py  utils3.py
