[tool.poetry]
name = "gmsh_automated_scripts"
version = "0.1.0"
description = ""
authors = ["LC-GA <cappellil@fusion.gat.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
gmsh = "^4.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

